--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <body>
-<h1>Hello World</h1>
-<p>This is Ayakashi's website</p>
+  <head>
+    <title>Ayakashi</title>
+    <link rel="stylesheet" type="text/css" title="style" href="css/style.css" />
+  </head>
+
+    <div id="Ayakashi">Ayakashi</div>
+    <div id="JRock">Japanese Rock</div>
+    <a href="https://www.facebook.com/ayakashi.sf"><canvas id="CubeCanvas"></canvas></a>
+
+  <footer>
+    <script src="js/three.min.js"></script>
+    <script src="js/ayakashi_cube.js"></script>
+  </footer>
 </body>
 </html>
