--- a/index.html
+++ b/index.html
@@ -1,34 +1,88 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+<head>
+	<title>Ayakashi SF | Japanese Rock Band</title>
+	<meta name="description" content="Ayakashi Japanese rock band from San Francisco."/>
+	<meta property="og:title" content="Ayakashi SF | Japanese Rock Band"/>
+	<meta property="og:description" content="Ayakashi Japanese rock band from San Francisco."/>
+	<meta property="og:type" content="website"/>
+	<meta property="og:url" content="https://ayakashimusic.github.io/"/>
+	<meta property="og:image" content=""/>
+	<meta property="og:locale" content="en_us"/>
+
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" type="text/css" href="file:///Users/yuini/github/ayakashimusic.github.io/css/style.css"/>
+</head>
 <body>
-  <head>
-    <title>Ayakashi</title>
-    <link href='http://fonts.googleapis.com/css?family=Russo+One|Black+Ops+One|Aldrich&effect=stonewash|anaglyph' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" title="style" href="css/style.css" />
-  </head>
+	<div class="container">
+		<section class="header">
+			<a href="https://www.facebook.com/ayakashi.sf"><img class="business-card" src="/images/ayakashi_bizcard.jpg"></a>
+		</section>
 
-    <div id="Ayakashi" class="font-effect-anaglyph">Ayakashi</div>
-    <div id="JRock" class="font-effect-stonewash">Japanese Rock</div>
-    
-    <div id="CanvasHolder">
-      <canvas id="CubeCanvas"></canvas>
-      <canvas id="MenuCanvas"></canvas>
-    </div>
+		<section class="feature-video">
+			<h1 class="section-heading">Comme ca - Ayakashi (original - live)</h1>
+			<iframe title="YouTube video player" class="youtube-player" type="text/html" src="//www.youtube.com/embed/BLeptfXsCnc?rel=0&amp;wmode=opaque" frameborder="0" allowfullscreen="true" width="950" height="480"></iframe>
+		</section>
 
-    <div id="socialMedias">
-      <a class="social-icon facebook" href="http://www.facebook.com/ayakashi.sf"></a>
-      <a class="social-icon soundcloud" href="http://www.soundcloud.com/ayakashi-sf"></a>
-      <a class="social-icon youtube" href="http://www.youtube.com/ayakashisf"></a>
-      <a class="social-icon reverbnation" href="http://www.reverbnation.com/ayakashisf"></a>
-      <a class="social-icon bandsintown" href="http://www.bandsintown.com/ayakashi"></a>
-    </div>
+		<section class="bio">
+			<h2 class="section-heading">Find us on Facebook</h2>
+			<a href="https://www.facebook.com/ayakashi.sf"><p>facebook.com/ayakashi-sf</p></a>
 
-  <footer>
-    <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" src="js/three.min.js"></script>
-    <script type="text/javascript" src="js/paper-full.min.js"></script>
-    <script type="text/javascript" src="scripts/ayakashi_cube.js"></script>
-    <script type="text/paperscript" src="scripts/menu.js" canvas="MenuCanvas"></script>
-  </footer>
+			<h2 class="section-heading">Biography</h2>
+			<p>Ayakashi was formed in 2013 in San Francisco by Chelsea from Japan and Stephane from France. Later, Alonso joined the duo as a drummer, followed by Rei on the bass and Yuin on the keyboard. The band started by playing covers to get the project rolling but is today exclusively working on new original songs all written in Japanese. Ayakashi has also decided to complete one new song for each show and it has been a ton of fun so far! We cannot wait to play our latest one live!</p>
+
+			<h2 class="section-heading">Members</h2>
+			<ol class="list-member">
+				<li class="member"><strong>Stephane</strong> (guitar) - France</li>
+				<li class="member"><strong>Chelsea</strong> (vocal) - Japan</li>
+				<li class="member"><strong>Alonso</strong> (drums) - USA</li>
+				<li class="member"><strong>Rei</strong> (bass) - Japan</li>
+				<li class="member"><strong>Yuin</strong> (keyboard) - Australia</li>
+			</ol>
+
+			<img class="bio-banner" src="/images/ayakashi_battleofthebands.jpg"/>
+		</section>
+
+		<section class="demo">
+			<h2 class="section-heading">Demo</h2>
+			<p>This is the first demo that we recorded in early 2014. The 3 songs below are covers and we are currently working on our new demo composed of 4 original songs.</p>
+
+			<iframe width="100%" height="100%px" frameborder="no" scrolling="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/152336608&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+
+			<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/149393027&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+
+			<iframe width="100%" height="100%px" frameborder="no" scrolling="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/152340882&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+		</section>
+
+		<section class="video">
+			<h2 class="section-heading">Video</h2>
+			<p>Live extracts</p>
+
+			<iframe title="YouTube video player" class="youtube-player" type="text/html" src="//www.youtube.com/embed/vXHHn25BRhE?rel=0&amp;wmode=opaque" frameborder="0" allowfullscreen="true" width="100%" height="480"></iframe>
+
+			<iframe title="YouTube video player" class="youtube-player" type="text/html" src="//www.youtube.com/embed/WlAm-Hc9HG4?rel=0&amp;wmode=opaque" frameborder="0" allowfullscreen="true" width="49%" height="270"></iframe>
+
+			<iframe title="YouTube video player" class="youtube-player" type="text/html" src="//www.youtube.com/embed/-BVT6yR0StI?rel=0&amp;wmode=opaque" frameborder="0" allowfullscreen="true" width="49%" height="270"></iframe>
+
+			<iframe title="YouTube video player" class="youtube-player" type="text/html" src="//www.youtube.com/embed/pk120rj6rkM?rel=0&amp;wmode=opaque" frameborder="0" allowfullscreen="true" width="49%" height="270"></iframe>
+
+			<iframe title="YouTube video player" class="youtube-player" type="text/html" src="//www.youtube.com/embed/18ZSGyzt6GQ?rel=0&amp;wmode=opaque" frameborder="0" allowfullscreen="true" width="49%" height="270"></iframe>
+
+			<iframe title="YouTube video player" class="youtube-player" type="text/html" src="//www.youtube.com/embed/opGW_wRV-aE?rel=0&amp;wmode=opaque" frameborder="0" allowfullscreen="true" width="49%" height="270"></iframe>
+
+			<iframe title="YouTube video player" class="youtube-player" type="text/html" src="//www.youtube.com/embed/421q5ykUVq0?rel=0&amp;wmode=opaque" frameborder="0" allowfullscreen="true" width="49%" height="270"></iframe>
+
+			<iframe title="YouTube video player" class="youtube-player" type="text/html" src="//www.youtube.com/embed/Ldpq9gtXQUs?rel=0&amp;wmode=opaque" frameborder="0" allowfullscreen="true" width="49%" height="270"></iframe>
+		</section>
+
+		<section class="photo-gallery">
+			<img class="photo tile" src="/images/ayakashi_tiles.png"/>
+			<img class="photo sensu" src="/images/ayakashi_sensu.jpg"/>
+		</section>
+
+		<footer class="footer">
+			<p>Ayakashi &copy; 2015</p>
+		</footer>
+	</div>
 </body>
 </html>
