--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta property="og:locale" content="en_us"/>
 
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" href="file:///Users/yuini/github/ayakashimusic.github.io/css/style.css"/>
+	<link rel="stylesheet" type="text/css" href="/css/style.css"/>
 </head>
 <body>
 	<div class="container">
