--- a/index_3dcube.html
+++ b/index_3dcube.html
@@ -4,7 +4,7 @@
   <head>
     <title>Ayakashi</title>
     <link href='http://fonts.googleapis.com/css?family=Russo+One|Black+Ops+One|Aldrich&effect=stonewash|anaglyph' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" title="style" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" title="style" href="css/style_3dcube.css" />
   </head>
 
     <div id="Ayakashi" class="font-effect-anaglyph">Ayakashi</div>
