--- a/3dcube_index.html
+++ b/3dcube_index.html
@@ -4,7 +4,7 @@
   <head>
     <title>Ayakashi</title>
     <link href='http://fonts.googleapis.com/css?family=Russo+One|Black+Ops+One|Aldrich&effect=stonewash|anaglyph' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" title="style" href="css/style_3dcube.css" />
+    <link rel="stylesheet" type="text/css" title="style" href="css/3dcube_style.css" />
   </head>
 
     <div id="Ayakashi" class="font-effect-anaglyph">Ayakashi</div>
@@ -27,8 +27,8 @@
     <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="js/three.min.js"></script>
     <script type="text/javascript" src="js/paper-full.min.js"></script>
-    <script type="text/javascript" src="scripts/ayakashi_cube.js"></script>
-    <script type="text/paperscript" src="scripts/menu.js" canvas="MenuCanvas"></script>
+    <script type="text/javascript" src="js/3dcube_three.js"></script>
+    <script type="text/paperscript" src="js/3dcube_menu.js" canvas="MenuCanvas"></script>
   </footer>
 </body>
 </html>
