New css + 3d cube

--- a/3dcube_index.html
+++ b/3dcube_index.html
@@ -10,8 +10,8 @@
     <div id="Ayakashi" class="font-effect-anaglyph">Ayakashi</div>
     <div id="JRock" class="font-effect-stonewash">Japanese Rock</div>
     
-    <div id="CanvasHolder">
-      <canvas id="CubeCanvas"></canvas>
+    <div id="aya-cube-holder">
+      <canvas id="aya-cube-canvas"></canvas>
       <canvas id="MenuCanvas"></canvas>
     </div>
 
