--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/198218805&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
           
             <p>
-              This is the first demo that we recorded in early 2014. The 3 songs below are covers and we are currently working on our new demo composed of 4 original songs.
+              This is the first demo that we recorded early 2014. The 3 songs below are covers and we are now exclusively working on original material.
             </p>
 
             <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/152336608&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
