--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/main.css"/>
   <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
+  <link rel="icon" type="image/x-icon" href="images/aya.ico" />
 
 
   <!--[if lte IE 8]>
