Updated JP version

--- a/index-jp.html
+++ b/index-jp.html
@@ -131,9 +131,12 @@
             カリフォルニア、ベイ・エリアで日本的なロックをやってる、Ayakashiです。</br>
             ちょっとノスタルジック、ちょっとグルービーなものを弾いてます。</br>
             </br>
-            国籍もバックグラウンドもいろいろ。こうしてブレンドされたAyakashiは、ベイエリアに美しいメロディとエネルギッシュなパフォーマンスを通して、新鮮、且つ革新的な日本の音楽をもたらします。</br>
+            国籍もバックグラウンドもいろいろ。こうしてブレンドされたAyakashiは、</br>
+            ベイエリアに美しいメロディとエネルギッシュなパフォーマンスを通して、</br>
+            新鮮、且つ革新的な日本の音楽をもたらします。</br>
             </br>
-            澄んだ声の日本人ボーカルを始め、クラッシックピアノと熱いギター、そしてノリのいいリズムの美事なコンビネーションのバンドです！</br>
+            澄んだ声の日本人ボーカルを始め、クラッシックピアノと熱いギター、</br>
+            そしてノリのいいリズムの美事なコンビネーションのバンドです！</br>
             </br>
             Please enjoy！</br>
             </br>
