Updated band photos

--- a/index-jp.html
+++ b/index-jp.html
@@ -92,9 +92,7 @@
     <div class="content pure-u-1 pure-u-md-3-4">
       <!-- Home -->
       <a name="home"></a>
-      <img class="" alt="Ayakashi Cherry Blossom Festival banner" height="auto" width="100%" src="images/ayakashi_cherryblossomfestival2015.jpg">
-      <!-- <img class="" alt="Ayakashi Cherry Blossom Festival banner" height="auto" width="100%" src="images/Ayakashi - Band photo 01 - 40p.png">
-      <img class="" alt="Ayakashi Cherry Blossom Festival banner" height="auto" width="100%" src="images/Ayakashi - Band photo 02 - 40p.png"> -->
+      <img class="" alt="Ayakashi AOD" height="auto" width="100%" src="images/band/Ayakashi_AOD_02.jpg">
 
       <div class="posts">
         <!-- News -->
@@ -231,7 +229,7 @@
         </section>
       </div>
       <br>
-      <img class="" alt="Ayakashi Battle of the Bands banner" height="auto" width="100%" src="images/ayakashi_battleofthebands.jpg">
+      <img class="" alt="Ayakashi AOD" height="auto" width="100%" src="images/band/Ayakashi_AOD_01.jpg">
 
       <div class="footer">
         <p>ayakashi &copy; 2015</p>
