--- a/index.html
+++ b/index.html
@@ -182,6 +182,12 @@
           </header>
 
           <div class="videoWrapper">          
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/uccK_IjkhJc?rel=0" frameborder="0" allowfullscreen></iframe>
+          </div>
+          <div class="videoWrapper">          
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/B9LWUDJ_qzc?rel=0" frameborder="0" allowfullscreen></iframe>
+          </div>
+          <div class="videoWrapper">          
             <iframe width="560" height="315" src="https://www.youtube.com/embed/g6dX2dDLDVM?rel=0" frameborder="0" allowfullscreen></iframe>
           </div>
           <div class="videoWrapper">
