--- a/index-en.html
+++ b/index-en.html
@@ -43,7 +43,7 @@
         </div>-->
         <img class="" alt="aya" height="auto" width="30%" src="images/aya.png">
         <h1 class="brand-title">Ayakashi</h1>
-        <h2 class="brand-tagline">Japanese Rock Band</h2>
+        <h2 class="brand-tagline">Japanese independent pop/rock band based in San Francisco</h2>
 
         <nav class="nav">
           <ul class="nav-list">
