News updated links

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             いいね、フォロー<br>
             いつでも大歓迎です！<br>
             <br>
-            <a href="http://www.ayakashi.band/#music">ファーストアルバム「暁」</a><br>
+            <a href="https://ayakashisf.bandcamp.com">ファーストアルバム「暁」</a><br>
             公開中です！<br>
             ぜひ聞いてください！
             </p>
