--- a/index-en.html
+++ b/index-en.html
@@ -137,7 +137,7 @@
               <li class="member"><strong>Stephane</strong> (guitar) - France</li>
               <li class="member"><strong>Alonso</strong> (drums) - USA</li>
               <li class="member"><strong>Rei</strong> (bass) - Japan/UK</li>
-              <li class="member"><strong>Yuin</strong> (keyboard) - Australia</li>
+              <li class="member"><strong>Yuin</strong> (keyboard) - Malaysia/Australia</li>
             </ul>
           </div>
         </section>
