--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             その後、</br>
             Alonso (Dr. アメリカ)、</br>
             Rei (Ba. イギリス／日本)、</br>
-            Yuin (Keys オーストラリア)の順に参入。正式にAyakashi結成。</br>
+            Yuin (Keys マレーシア/オーストラリア)の順に参入。正式にAyakashi結成。</br>
           </div>
         </section>
 
