JP news update Forever Love

--- a/index.html
+++ b/index.html
@@ -119,9 +119,11 @@
             応援してくれたみんなのおかげで<br>
             とても楽しい時を過ごせました！<br>
             <br>
-            二日目、Entertainment Hallでの<br>
-            <a href="https://youtu.be/Gp28dvvOWxA">「妖's Rock」ライブ映像を</a><br>
-            アップしました。楽しんでね！<br>
+            ２日目、Entertainment Hallでの<br>
+            ライブ映像<a href="https://youtu.be/Gp28dvvOWxA">「妖’s ロック」</a>と<br>
+            <a href="https://youtu.be/0pnaWwxAV5s">「Forever Love」</a>（カバー）を<br>
+            アップしました。<br>
+            楽しんでね！<br>
             <br>
             今後もさらにライブ映像などを<br>
             アップして行きますよ〜<br>
