--- a/index-en.html
+++ b/index-en.html
@@ -100,7 +100,7 @@
     <div class="content pure-u-1 pure-u-md-3-4">
       <!-- Home -->
       <a name="home"></a>
-      <img class="" alt="Ayakashi Anime Expo 2016" height="auto" width="100%" src="images/band/ayakashi_cherryblossom_02.jpg">
+      <img class="" alt="Ayakashi Anime Expo 2016" height="auto" width="100%" src="images/band/Ayakashi - Band photo 02.png">
 
       <div class="posts">
         <!-- News -->
