Added lyrics for "Amaterasu" in JP site.

--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
             <p>Ayakashi - <a href="https://docs.google.com/document/d/1S0dlTWL2VI5pQH4kBy5i4kpMAGSbS0j5-qQqFn_lCwI/pub" target="_blank">Little Things</a></p>
             <p>Ayakashi - <a href="https://docs.google.com/document/d/1ItRMuV0ZpIk0qdYWaQJ-PfB7U4l6zq8RLGIsYYxL9zk/pub" target="_blank">Nostalgia</a></p>
             <p>Ayakashi - <a href="https://docs.google.com/document/d/1AYAq0x1R4No6EPFbdDipgJ8iaRqjJ-uWrpnmg8-YY7Q/pub" target="_blank">Comme Ca</a></p>
+            <p>Ayakashi - <a href="https://docs.google.com/document/d/1L9PGKueDA_bBstvFmDd3LTK1TdK79VhuT3WzJDSJfS8/pub" target="_blank">Amaterasu</a></p>
           </div>
         </section>
 
