--- a/index.html
+++ b/index.html
@@ -84,17 +84,21 @@
 
         <div style="margin-top:30px">
         <a href="https://www.facebook.com/ayakashi.sf" target="_blank"><img src="images/icons/social_medias/facebook.png" height="15%" width="15%"/></a>
-        <a href="https://www.youtube.com/user/ayakashisf" target="_blank"><img src="images/icons/social_medias/youtube.png" height="15%" width="15%"/></a>
+        <a href="https://www.youtube.com/user/ayakashisf" target="_blank"><img src="images/icons/social_medias/youtube2.png" height="15%" width="15%"/></a>
         <a href="https://twitter.com/ayakashisf" target="_blank"><img src="images/icons/social_medias/twitter.png" height="15%" width="15%"/></a>
         <a href="https://www.instagram.com/ayakashiband" target="_blank"><img src="images/icons/social_medias/instagram.png" height="15%" width="15%"/></a><br>
 
-        <a href="http://ayakashiband.tumblr.com" target="_blank"><img src="images/icons/social_medias/tumblr.png" height="15%" width="15%"/></a>
-        <a href="https://ayakashisf.bandcamp.com" target="_blank"><img src="images/icons/social_medias/bandcamp.png" height="15%" width="15%"/></a>
-        <a href="https://www.patreon.com/ayakashi" target="_blank"><img src="images/icons/social_medias/patreon.png" height="15%" width="15%"/></a>
-        <a href="https://soundcloud.com/ayakashi-sf" target="_blank"><img src="images/icons/social_medias/soundcloud.png" height="15%" width="15%"/></a><br>
-
         <a href="https://itunes.apple.com/us/album/akatsuki/id1123908350" target="_blank"><img src="images/icons/social_medias/itunes.png" height="15%" width="15%"/></a>
         <a href="https://play.google.com/store/music/artist/Ayakashi?id=Adfvuqu37iovzbhkxk7nepytj2m" target="_blank"><img src="images/icons/social_medias/googleplay.png" height="15%" width="15%"/></a>
+        <a href="https://ayakashisf.bandcamp.com" target="_blank"><img src="images/icons/social_medias/bandcamp.png" height="15%" width="15%"/></a>
+        <a href="https://www.reverbnation.com/ayakashisf" target="_blank"><img src="images/icons/social_medias/reverbnation.png" height="15%" width="15%"/></a><br>
+
+        <a href="http://ayakashiband.tumblr.com" target="_blank"><img src="images/icons/social_medias/tumblr.png" height="15%" width="15%"/></a>
+        <a href="https://www.patreon.com/ayakashi" target="_blank"><img src="images/icons/social_medias/patreon.png" height="15%" width="15%"/></a>
+
+        <!--        
+        <a href="https://soundcloud.com/ayakashi-sf" target="_blank"><img src="images/icons/social_medias/soundcloud.png" height="15%" width="15%"/></a>
+        -->
         </div>
 
       </div>
