Forgot to save previous changes

--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
         <a href="https://ayakashisf.bandcamp.com" target="_blank"><img src="images/icons/social_medias/bandcamp.png" height="15%" width="15%"/></a>
         <a href="https://www.patreon.com/ayakashi" target="_blank"><img src="images/icons/social_medias/patreon.png" height="15%" width="15%"/></a><br>
 
-        <!--        
+        <!--
+        <a href="https://www.reverbnation.com/ayakashisf" target="_blank"><img src="images/icons/social_medias/reverbnation.png" height="15%" width="15%"/></a>
+        <a href="http://ayakashiband.tumblr.com" target="_blank"><img src="images/icons/social_medias/tumblr.png" height="15%" width="15%"/></a>
         <a href="https://soundcloud.com/ayakashi-sf" target="_blank"><img src="images/icons/social_medias/soundcloud.png" height="15%" width="15%"/></a>
         -->
         </div>
