--- a/index.html
+++ b/index.html
@@ -287,6 +287,7 @@
           <p>2017/04/13 <b>ArtMix Sakuramento</b>, Crocker Art Museum, サクラメント</p>
           <p>2017/04/09 <b>50th Northern California Cherry Blossom Festival</b>, Japantown サンフランシスコ (Sakura 360)</p>
           <p>2017/04/07 <b>One night, One Planet</b>, Neck Of The Woods, サンフランシスコ</p>
+          <p>2017/03/18 <b>AOD - Anime On Display</b>, サンタクララ</p>
           <p>2017/03/02 <b>BAR Con</b>, サンフランシスコ</p>
           <p>2016/11/18 <b>Kraken Con</b>, オークランド</p>
           <p>2016/07/02 <b>Anime Expo</b>, ロサンゼルス</p>
